# BIO-INFO-2025

./: .gitignore  .gitmodules  README.md
src/: PART0_generate_figures.ipynb  Qunatifying_clusterness_trajectory _reproduction.ipynb  README.md  data_generator.py  generate_figures.ipynb  imports.py  metrics.py  pyproject.toml  test.py  testjupyter.ipynb  utils.py  utils2.py  visualization.py
src/data/: our_meta_scores.npy  real_data_scores.npy
src/scanpy_modified/: __init__.py  readwrite.py
src/scanpy_modified/api/: __init__.py
